--- a/unity_android/Assets/Plugins/Android/AndroidManifest.xml
+++ b/unity_android/Assets/Plugins/Android/AndroidManifest.xml
@@ -12,7 +12,6 @@
      <!--相机权限 （必须）-->
     <uses-permission android:name="android.permission.CAMERA"/>
     <application>
-
         <activity 
             android:name="com.pq.test.MainActivity"
             android:label="@string/app_name">
@@ -25,5 +24,18 @@
         <activity
              android:name="com.pq.test.WebViewActivity">
          </activity>
+         <!-- 别名 -->
+        <activity-alias
+            android:name="com.pq.test.appIcon1"
+            android:enabled="false"
+            android:icon="@mipmap/ic_launcher"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:label="@string/app_name"
+            android:targetActivity="com.pq.test.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity-alias>
     </application>
 </manifest>
